# anytran

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ai1.toml  dockerfile  entrypt.sh  install_pkg.sh  pyproject.toml  rtsp.toml  test_config.py  voice_table_app.py
codeExamples/: asrnorm-last-mess.py  asrnorm.py  nllb.py  nllb_batch.py  normline.py  pipeline.py  test_create_audio.py
doc/: GEMMA4_SETUP.md  INSTALLATION.md  LOOPTRAN.md  LocalModelTask1.md  MQTT.md  OPTIONS.md  TEXT_TRANSLATION.md  TRANSLATEGEMMA_SETUP.md  TTS_BACKENDS.md  VOICE_MATCHING.md  WHISPER.md
src/anytran/: CUDApywhispercpp.ps1  __init__.py  audio_io.py  certs.py  chatlog.py  config.py  config_options.py  gemma-12b-it-example.py  gemma4_backend.py  main.py  mqtt_client.py  normalizer.py  pipeline_config.py  pipelines.py  pipelines_fixed.py  processing.py  pywhispercppcuda.sh  runner_config.py  stream_output.py  stream_rtsp.py  stream_youtube.py  text_translator.py  timing.py  tts.py  utils.py  vad.py  voice_matcher.py  voice_table.json  voice_table.py  web_server.py  whisper_backend.py
src/anytran/runners/: __init__.py  config.py  run_file_input.py  run_multi_rtsp.py  run_realtime_output.py  run_realtime_rtsp.py  run_realtime_youtube.py
tests/: conftest.py  test_certs_coverage.py  test_chatlog.py  test_chatterbox_tts.py  test_config_coverage.py  test_config_options.py  test_coqui_tts.py  test_cosyvoice_tts.py  test_cross_language_voice_cloning.py  test_custom_tts.py  test_fish_tts.py  test_gemma4_backend.py  test_indextts_tts.py  test_looptran.py  test_main_helpers.py  test_mqtt_client_coverage.py  test_normalizer.py  test_pipeline_stages.py  test_piper_tts.py  test_processing_coverage.py  test_runners_coverage.py  test_slate_voice_language_fix.py  test_stream_output_coverage.py  test_stream_youtube_coverage.py  test_stream_youtube_utils.py  test_text_translator_backends_quick.py  test_text_translator_coverage.py  test_text_translator_extra.py  test_timing.py  test_timing_coverage.py  test_tts_helpers.py  test_tts_lang_voice.py  test_tts_synthesize.py  test_utils_complete.py  test_vad_coverage.py  test_voice_matcher.py  test_voice_matcher_coverage.py  test_voice_matcher_extra.py  test_voice_table_app.py  test_voice_table_coverage.py  (+5 more)
